--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="KSDN-808" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="KSDN-808はJavaScriptで作られた4つのドラム音と関西電気保安協会が鳴る実用的なリズムマシーンです。あなたの作成したクールなリズムトラックを保存して共有することができます。無料です。" />
-    <meta property="og:image" content="http://hotbros.herokuapp.com/images/ogp.png" />
+    <meta property="og:image" content="http://ksdn808.herokuapp.com/images/ogp.png" />
     <link href="http://fonts.googleapis.com/css?family=Michroma" rel="stylesheet" type="text/css">
     <link type="text/css" media="screen" rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="shortcut icon" href="/images/favicon.ico">
