--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
           <li>左クリック → 音を置く (強く)</li>
           <li>右クリック → 音を置く (弱く)</li>
           <li>[ SPACE ] → 再生/停止</li>
-          <li>[ N ] → 新しいパターンを追加</li>
+          <li>Shift + [ N ] → 新しいパターンを追加</li>
           <li>[ Z ] → オプションの表示/非表示</li>
           <br/>
           <li>[ H, J, K, L ] → カーソル移動</li>
