--- a/views/index.html
+++ b/views/index.html
@@ -70,6 +70,7 @@
           <li>[ Z ] → オプションの表示/非表示</li>
           <br/>
           <li>[ H, J, K, L ] → カーソル移動</li>
+          <li>[ 矢印キー ] → カーソル移動</li>
           <li>[ A ] →カーソルに音を外す</li>
           <li>[ S ] →カーソルに音を置く (弱く)</li>
           <li>[ D ] →カーソルに音を置く (強く)</li>
