--- a/views/index.html
+++ b/views/index.html
@@ -104,7 +104,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="/javascripts/jquery.socialbutton-1.8.1.js"></script>
-  <script type="text/javascript" src="/javascripts/player.js"></script>
+  <script type="text/javascript" src="/javascripts/pico-player.js"></script>
   <script type="text/javascript" src="/javascripts/main.js"></script>
   <script type="text/javascript" src="/javascripts/voice.js"></script>
 </html>
