--- a/views/index.html
+++ b/views/index.html
@@ -24,12 +24,18 @@
       </div>
     </header>
     <div id="console">
-      <button id="play">play</button>
-      <button id="options">options</button>
-      <button id="add">+pattern</button>
-      <button id="save">save</button>
-      <input id="save-msg" />
-      <ul id="selector"></ul>
+      <section>
+        <button id="play">play</button>
+        <button id="save">save</button><br/>
+        <button id="options">options</button>
+        <button id="add">+pattern</button>
+      </section>
+      <section>
+        <input id="save-msg" /><br/>
+        <ul id="selector"></ul>
+      </section>
+      <canvas id="spectrum"></canvas>
+      
       <div id="options-panel">
         <section>
           <div class="slider">
@@ -119,6 +125,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="/javascripts/jquery.socialbutton-1.8.1.js"></script>
   <script type="text/javascript" src="/javascripts/pico-player.js"></script>
+  <script type="text/javascript" src="/javascripts/fft.js"></script>
   <script type="text/javascript" src="/javascripts/main.js"></script>
   <script type="text/javascript" src="/javascripts/voice.js"></script>
 </html>
